Bug #43598
mds: PurgeQueue does not handle objecter errors
% Done:
0%
Source:
Development
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
The filer may be throwing errors like ENOSPC which are getting ignored. The PurgeQueue may be marking items purged (in the MDS journal) even though nothing has been purged.
Related issues
History
#1 Updated by Patrick Donnelly about 1 year ago
- Target version changed from v15.0.0 to v16.0.0
#2 Updated by Varsha Rao about 1 year ago
- Status changed from New to In Progress
#3 Updated by Varsha Rao 11 months ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 34144
#4 Updated by Nathan Cutler 10 months ago
- Backport changed from nautilus,mimic to octopus,nautilus
#5 Updated by Patrick Donnelly 10 months ago
- Status changed from Fix Under Review to Pending Backport
#6 Updated by Nathan Cutler 10 months ago
- Copied to Backport #45602: nautilus: mds: PurgeQueue does not handle objecter errors added
#7 Updated by Nathan Cutler 10 months ago
- Copied to Backport #45603: octopus: mds: PurgeQueue does not handle objecter errors added
#8 Updated by Nathan Cutler 9 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".